[package]
name = "ognibuild"
version = "0.0.31"
authors = [ "Jelmer Vernooij <jelmer@jelmer.uk>"]
edition = "2021"
license = "GPL-2.0+"
description = "Detect and run any build system"
repository = "https://github.com/jelmer/ognibuild.git"
homepage = "https://github.com/jelmer/ognibuild"
default-run = "ogni"

[dependencies]
pyo3 = "0.22"
breezyshim = { version = "0.1", optional = true }
buildlog-consultant = { version = ">=0.0.43" }
upstream-ontologist = { version = "0.2", optional = true }
axum = { version = "0.7", optional = true, features = ["json", "http2", "tokio"] }
chrono = ">=0.4"
clap = { version = "4", features = ["derive", "env"], optional = true }
deb822-lossless = ">=0.2"
debian-analyzer = { version = "0.158.23", optional = true }
#debian-analyzer = { path = "../lintian-brush/analyzer", optional = true }
debian-changelog = { version = ">=0.2", optional = true }
debian-control = { version = ">=0.1.25", optional = true }
debversion = { version = "0.4", optional = true }
env_logger = { version = ">=0.10", optional = true }
flate2 = { version = "1", optional = true }
fs_extra = "1.3.0"
inventory = ">=0.3"
lazy-regex = ">=2"
lazy_static = ">=1.4"
libc = "0.2.162"
log = "0.4.20"
lz4_flex = { version = ">=0.11", optional = true }
lzma-rs = { version = "0.3.0", optional = true }
makefile-lossless = "0.1.3"
maplit = "1.0.2"
nix = { version = ">=0.27.0", features = ["user"] }
pep508_rs = "0.9"
percent-encoding = "2.3.1"
pyproject-toml = "0.13"
r-description = { version = ">=0.2", features = ["serde"] }
rand = "0.8.5"
regex = "1.10.6"
reqwest = { version = ">=0.10", optional = true, features = ["blocking", "json"] }
semver = ">=1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
shlex = "1.3.0"
sqlx = { version = "0.8.1", optional = true, features = ["postgres", "runtime-tokio-native-tls"] }
stackdriver_logger = { version = "0.8.2", optional = true }
tempfile = ">=3"
tokio = { version = "1", features = ["full"], optional = true }
toml = ">=0.8"
toml_edit = ">=0.22"
url = ">=2"
whoami = { version = ">=1.4", default-features = false }
xmltree = ">=0.10"

[features]
default = ["debian", "cli", "udd", "upstream", "breezy", "dep-server"]
debian = ["dep:debian-changelog", "dep:debversion", "dep:debian-control", "dep:flate2", "dep:lzma-rs", "dep:lz4_flex", "dep:reqwest", "breezyshim/debian", "dep:debian-analyzer"]
cli = ["dep:clap", "dep:env_logger"]
udd = ["dep:sqlx", "dep:tokio", "debian"]
dep-server = ["dep:axum", "dep:tokio"]
upstream = ["dep:upstream-ontologist"]
breezy = ["dep:breezyshim"]

[dev-dependencies]
lazy_static = "1"
test-log = "0.2"

[[bin]]
name = "ognibuild-deb"
path = "src/bin/ognibuild-deb.rs"
required-features = ["cli", "debian", "breezy"]

[[example]]
name = "apt-file-search"
path = "examples/apt-file-search.rs"
required-features = ["cli", "debian"]

[[bin]]
name = "dep-server"
path = "src/bin/dep-server.rs"
required-features = ["dep-server", "cli", "debian"]

[[bin]]
name = "ognibuild-dist"
path = "src/bin/ognibuild-dist.rs"
required-features = ["cli", "breezy"]

[[bin]]
name = "ogni"
path = "src/bin/ogni.rs"
required-features = ["cli"]

[[bin]]
name = "deb-fix-build"
path = "src/bin/deb-fix-build.rs"
required-features = ["debian", "cli", "breezy"]

[[bin]]
name = "deb-upstream-deps"
path = "src/bin/deb-upstream-deps.rs"
required-features = ["cli", "debian", "breezy"]

[[bin]]
name = "report-apt-deps-status"
path = "src/bin/report-apt-deps-status.rs"
required-features = ["cli", "debian"]
