[package]
name = "ognibuild"
version = "0.0.35"
authors = [ "Jelmer Vernooij <jelmer@jelmer.uk>"]
edition = "2021"
license = "GPL-2.0+"
description = "Detect and run any build system"
repository = "https://github.com/jelmer/ognibuild.git"
homepage = "https://github.com/jelmer/ognibuild"
default-run = "ogni"

[dependencies]
pyo3 = "0.25"
breezyshim = { version = "0.5", optional = true }
buildlog-consultant = { version = "0.1.1" }
#buildlog-consultant = { path = "../buildlog-consultant" }
upstream-ontologist = { version = "0.2", optional = true }
chrono = ">=0.4"
clap = { version = "4", features = ["derive", "env"], optional = true }
deb822-lossless = ">=0.2"
env_logger = { version = ">=0.10", optional = true }
fs_extra = "1.3.0"
inventory = ">=0.3"
lazy-regex = ">=2"
lazy_static = "1"
libc = "0.2"
log = "0.4"
makefile-lossless = "0.2.1"
maplit = "1.0.2"
nix = { version = ">=0.27.0", features = ["user"] }
pep508_rs = "0.9"
percent-encoding = "2.3.1"
pyproject-toml = "0.13"
r-description = { version = ">=0.3", features = ["serde"] }
rand = "0.9.0"
regex = "1.10.6"
reqwest = { version = ">=0.10", optional = true, features = ["blocking", "json"] }
semver = ">=1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
shlex = "1.3.0"
stackdriver_logger = { version = "0.8.2", optional = true }
tempfile = ">=3"
toml = ">=0.8"
toml_edit = ">=0.22"
url = ">=2"
whoami = { version = ">=1.4", default-features = false }
xmltree = ">=0.10"
dirs = ">=5,<7"
tokio = { version = "1", features = ["rt", "macros"], optional = true }
ognibuild-debian = { version = "0.0.1", optional = true }

[features]
default = ["cli", "upstream", "breezy"]
cli = ["dep:clap", "dep:env_logger"]
upstream = ["dep:upstream-ontologist", "dep:tokio"]
breezy = ["dep:breezyshim"]

# We don't actually directly access functions ognibuild-debian, but it registers
# the apt installer dynamically.
debian = ["dep:ognibuild-debian"]

[dev-dependencies]
lazy_static = "1"
test-log = "0.2"

[[bin]]
name = "ogni"
path = "src/bin/ogni.rs"
required-features = ["cli"]
