[build-system]
requires = ["setuptools>=61.2", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[tool.mypy]
warn_redundant_casts = true
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "aptsources.*",
    "breezy.*",
    "buildlog_consultant.*",
    "lz4.*",
    "ruamel.*",
    "semver.*",
    "requirements.*",
    "setuptools.config.setupcfg",
    "google.cloud.logging.*",
]
ignore_missing_imports = true

[project]
name = "ognibuild"
description = "Detect and run any build system"
maintainers = [{name = "Jelmer Vernooĳ", email = "jelmer@jelmer.uk"}]
license = {text = "GNU GPLv2 or later"}
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: POSIX",
]
urls = {Homepage = "https://jelmer.uk/code/ognibuild"}
requires-python = ">=3.9"
dependencies = [
    "breezy>=3.2",
    "buildlog-consultant>=0.0.29",
    "requirements-parser",
    "toml",
    "setuptools",
    "ruamel.yaml",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "testtools",
    "types-setuptools",
    "types-psycopg2",
    "google-cloud-logging",
    "ruff==0.4.7",
]
debian = [
    "debmutate",
    "python_debian",
    "python_apt",
    "brz-debian",
    "lz4",
]
remote = [
    "breezy",
    "dulwich",
]
dep_server = [
    "aiohttp",
    "aiohttp-openmetrics",
]
gcp = ["google-cloud-logging"]
testing = [
    "testtools",
    "types-toml",
]

[project.scripts]
ogni = "ognibuild.__main__:main"
deb-fix-build = "ognibuild.debian.fix_build:main"
deb-upstream-deps = "ognibuild.debian.upstream_deps:main"

[tool.setuptools]
script-files = ["scripts/report-apt-deps-status"]

[tool.setuptools.packages.find]
where = ["py"]
include = ["ognibuild*"]

[tool.setuptools.package-data]
ognibuild = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "ognibuild.__version__"}

[tool.distutils.bdist_wheel]
universal = 1

[tool.ruff]
target-version = "py37"
line-length = 79

[tool.ruff.lint]
select = [
    "ANN",
    "D",
    "E",
    "F",
    "I",
    "UP",
]
ignore = [
    "ANN001",
    "ANN002",
    "ANN003",
    "ANN101",
    "ANN102",
    "ANN201",
    "ANN202",
    "ANN204",
    "ANN206",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D417",
    "E501",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.cibuildwheel]
before-build = "pip install -U setuptools-rust && rustup default stable && rustup show"
environment = {PATH="$HOME/.cargo/bin:$PATH"}
skip = "*-win32 *musllinux*"

[tool.cibuildwheel.linux]
before-build = "pip install -U setuptools-rust && curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain=stable --profile=minimal -y && rustup show"

[tool.ruff.lint.isort]
known-third-party = ["debian", "debmutate", "buildlog_consultant"]
