[metadata]
name = ognibuild
description = Detect and run any build system
version = attr:ognibuild.__version__
maintainer = Jelmer Vernooĳ
maintainer_email = jelmer@jelmer.uk
license = GNU GPLv2 or later
url = https://jelmer.uk/code/ognibuild
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: POSIX

[options]
packages =
    ognibuild
    ognibuild.tests
    ognibuild.debian
    ognibuild.resolver
    ognibuild.session
scripts = scripts/report-apt-deps-status
install_requires =
    breezy>=3.2
    buildlog-consultant>=0.0.21
    requirements-parser
tests_require =
    python_debian
    buildlog-consultant>=0.0.21
    breezy
    brz-debian
    testtools

[options.entry_points]
console_scripts =
    ogni=ognibuild.__main__:main
    deb-fix-build=ognibuild.debian.fix_build:main

[options.extras_require]
debian =
    debmutate
    python_debian
    python_apt@https://salsa.debian.org/apt-team/python-apt.git
remote =
    breezy
    dulwich
dep_server =
    aiohttp
    aiohttp-openmetrics
gcp = google-cloud-logging

[flake8]
banned-modules = silver-platter = Should not use silver-platter
exclude = build,.eggs/

[mypy]
ignore_missing_imports = True

[bdist_wheel]
universal = 1
