[metadata]
name = ognibuild
description = Detect and run any build system
version = attr:ognibuild.__version__
maintainer = Jelmer Vernooĳ
maintainer_email = jelmer@jelmer.uk
license = GNU GPLv2 or later
url = https://jelmer.uk/code/ognibuild
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: POSIX

[options]
packages =
    ognibuild
    ognibuild.tests
    ognibuild.debian
    ognibuild.resolver
    ognibuild.session
scripts = scripts/report-apt-deps-status
install_requires =
    breezy>=3.2
    buildlog-consultant>=0.0.21
    requirements-parser
    toml
    setuptools
    ruamel.yaml
tests_require =
    testtools

[options.entry_points]
console_scripts =
    ogni=ognibuild.__main__:main
    deb-fix-build=ognibuild.debian.fix_build:main

[options.extras_require]
dev =
    testtools
debian =
    debmutate
    # Install from git until the fix for #1018822 makes it into pypi
    python_debian@git+https://salsa.debian.org/python-debian-team/python-debian
    python_apt@git+https://salsa.debian.org/apt-team/python-apt.git
    brz-debian
remote =
    breezy
    dulwich
dep_server =
    aiohttp
    aiohttp-openmetrics
gcp = google-cloud-logging

[flake8]
banned-modules = silver-platter = Should not use silver-platter
exclude = build,.eggs/

[mypy]
ignore_missing_imports = True

[bdist_wheel]
universal = 1
