[metadata]
name = ognibuild
description = Detect and run any build system
version = attr:ognibuild.__version__
maintainer = Jelmer Vernooĳ
maintainer_email = jelmer@jelmer.uk
license = GNU GPLv2 or later
url = https://jelmer.uk/code/ognibuild
classifiers = 
	Development Status :: 4 - Beta
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: Implementation :: CPython
	Operating System :: POSIX

[options]
packages = 
	ognibuild
	ognibuild.debian
	ognibuild.resolver
	ognibuild.session
python_requires = >=3.9
scripts = scripts/report-apt-deps-status
install_requires = 
	breezy>=3.2
	buildlog-consultant>=0.0.29
	requirements-parser
	toml
	setuptools
	ruamel.yaml
tests_require = 
	testtools
	types-toml

[options.entry_points]
console_scripts = 
	ogni=ognibuild.__main__:main
	deb-fix-build=ognibuild.debian.fix_build:main
	deb-upstream-deps=ognibuild.debian.upstream_deps:main

[options.extras_require]
dev = 
	testtools
	types-setuptools
	types-psycopg2
	google-cloud-logging
debian = 
	debmutate
	python_debian
	python_apt
	brz-debian
	lz4
remote = 
	breezy
	dulwich
dep_server = 
	aiohttp
	aiohttp-openmetrics
gcp = google-cloud-logging

[flake8]
banned-modules = silver-platter = Should not use silver-platter
exclude = build,.eggs/

[mypy]
ignore_missing_imports = True

[bdist_wheel]
universal = 1

[options.package_data]
ognibuild = 
	py.typed

[egg_info]
tag_build = 
tag_date = 0

