[package]
name = "ognibuild-py"
version = { workspace = true }
authors = [ "Jelmer Vernooij <jelmer@jelmer.uk>"]
edition = "2021"
license = "GPL-2.0+"
description = "Python bindings for ognibuild"
publish = false

[dependencies]
breezyshim = { workspace = true }
buildlog-consultant = { workspace = true }
ognibuild = { path = ".." }
pyo3 = { workspace = true, features=["extension-module"]}
serde_json = "1.0.127"

[lib]
crate-type = ["cdylib"]
